# ncode-web

./: .gitmodules  .travis.yml  CMakeLists.txt
cmake_extensions/: FindNCodeCommon.cmake  FindNCodeNet.cmake
data/grapher_templates/: bar.py  cdf.py  line.py
data/html_grapher_test_data/: cdf_test.html  stacked_plot_test.html
data/www/: graph.html  graph_style.html  index.html  table_blurb.html
src/: fcgi.cc  fcgi.h  fcgi_main.cc  fcgi_test.cc  graph.cc  graph.h  graph_test.cc  grapher.cc  grapher.h  grapher_test.cc  json.hpp  server.cc  server.h  server_test.cc  web_page.cc  web_page.h  web_page_test.cc
src/ctemplate/: config.h  indented_writer.h  per_expand_data.cc  per_expand_data.h  template.cc  template.h  template_annotator.cc  template_cache.cc  template_cache.h  template_dictionary.cc  template_dictionary.h  template_dictionary_interface.h  template_modifiers.cc  template_modifiers.h  template_modifiers_internal.h  template_namelist.h  template_pathops.cc  template_string.cc  template_string.h
src/ctemplate/base/: arena-inl.h  arena.cc  arena.h  fileutil.h  macros.h  manual_constructor.h  mutex.h  small_map.h  thread_annotations.h  util.h
src/ctemplate/htmlparser/: htmlparser.cc  htmlparser.h  htmlparser_cpp.h  jsparser.cc  jsparser.h  statemachine.cc  statemachine.h
